# final-project

./: Makefile  gjk.ipynb  poster.ai
report/: references.bib  report.tex
report/scripts/: runtime_approaches.py  runtime_pairgen.py  scalibility_approaches.py
src/: CMakeLists.txt  aabb.h  helpers.h  main.cpp  mcd-parallel.h  mcd-sequential.h  mcd.cu  mcd.cuh  mcd_cpu.cpp  mcd_cuda.cpp  mcd_naive.cpp  mcd_naive.h
src/lib/: aabb.h  geometry_helpers.h  log.h  obj.h  timing.h  vec2.h  vec3.h  vec4.h
tests/: scene01.txt  test01.txt  test02.txt
